--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: SurfRCaT Documentation
+description: Welcome to the documentation for the Surf-camera Remote Calibration Tool 
