--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,11 @@
-theme: jekyll-theme-leap-day
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - Page.md
+# Site wide configuration
+
+title: SurfRCaT Homepage
+locale: en_US
+
+# Enter the following platform usernames if you would like for them to appear on your site.
+owner:
+  name: Matthew P. Conlin
+  bio: "This is a test."
+  email: conlinm@ufl.edu
+
