--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,36 +1,15 @@
-# Site wide configuration
+remote_theme: christianezeani/panthera-jekyll
 
 title: SurfRCaT Homepage
-locale: en_US
 
-# Enter the following platform usernames if you would like for them to appear on your site.
-owner:
-  name: Matthew P. Conlin
-  bio: "This is a test."
-  email: conlinm@ufl.edu
-  
-# Jekyll configuration
-
-permalink:   /:categories/:title/
-markdown:    kramdown
-highlighter: rouge
-sass:
-  sass_dir: _sass
-  style: compressed
-plugins:
-  - jekyll-sitemap
-  - jekyll-seo-tag
-
-kramdown:
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  enable_coderay: false
-
-include: [".htaccess"]
-exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
+menu:
+  - text: Home
+    link: /
+    icon: ""
+    
+  - text: Example Page
+    link: /example
+    icon: ""
 
 
 
-remote_theme: christianezeani/panthera-jekyll
