--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ remote_theme: christianezeani/panthera-jekyll
 title: SurfRCaT Homepage
 
 left_side:
-  background_image: "/_data/icon3.png"
+  background_image: "./_data/icon3.png"
   
 menu:
   - text: Home
