--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,18 +1,31 @@
 remote_theme: christianezeani/panthera-jekyll
 
-title: SurfRCaT Homepage
-
-left_side:
-  background_image: "https://github.com/conlin-matt/SurfRCaT/blob/master/docs/_data/icon3.png"
+title: SurfRCaT
   
 menu:
   - text: Home
     link: /
     icon: ""
     
-  - text: Example Page
-    link: /example
+  - text: About
+    link: /about
+    icon: ""
+    
+  - text: Scientific Overview
+    link: /overview
     icon: ""
 
+  - text: Download
+    link: /download
+    icon: ""
 
-
+  - text: Tutorials
+    link: /tutorials
+    icon: ""
+    
+  - text: Extensions
+    link: /extensions
+    icon: ""    
+    
+    
+    
