--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,31 +1,59 @@
-remote_theme: christianezeani/panthera-jekyll
-
-title: SurfRCaT
-
-menu:
-  - text: Home
-    link: /
-    icon: ""
-
-  - text: About
-    link: /about
-    icon: ""
-
-  - text: Scientific Overview
-    link: /overview
-    icon: ""
-
-  - text: Download
-    link: /download
-    icon: ""
-
-  - text: Tutorials
-    link: /tutorials
-    icon: ""
-
-  - text: Extensions
-    link: /extensions
-    icon: "" 
+remote_theme: pmarsceill/just-the-docs
     
+logo: "https://github.com/conlin-matt/SurfRCaT/blob/master/docs/_data/icon3.pngg"    
     
-    
+search_enabled: true
+
+search:
+  # Split pages into sections that can be searched individually
+  # Supports 1 - 6, default: 2
+  heading_level: 2
+  # Maximum amount of previews per search result
+  # Default: 3
+  previews: 3
+  # Maximum amount of words to display before a matched word in the preview
+  # Default: 5
+  preview_words_before: 5
+  # Maximum amount of words to display after a matched word in the preview
+  # Default: 10
+  preview_words_after: 10
+  # Set the search token separator
+  # Default: /[\s\-/]+/
+  # Example: enable support for hyphenated search words
+  tokenizer_separator: /[\s/]+/
+  # Display the relative url in search results
+  # Supports true (default) or false
+  rel_url: true
+  # Enable or disable the search button that appears in the bottom right corner of every page
+  # Supports true or false (default)
+  button: false
+  
+  aux_links:
+  "SurfRCaT on GitHub":
+    - "//github.com/conlin-matt/SurfRCaT"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: false
+
+# Heading anchor links appear on hover over h1-h6 tags in page content
+# allowing users to deep link to a particular heading on a page.
+#
+# Supports true (default) or false
+heading_anchors: true
+
+# Footer content 
+# appears at the bottom of every page's main content
+footer_content: "Copyright &copy; 2017-2019 Patrick Marsceill. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub."
+gh_edit_repository: "https://github.com/pmarsceill/just-the-docs" # the github URL for your repo
+gh_edit_branch: "master" # the branch that your docs is served from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+color_scheme: dark
